plugins {
    id 'com.android.application'
    id 'org.jetbrains.kotlin.android'
}

android {
    namespace 'com.s.projectloomdemo'
    compileSdk 33

    defaultConfig {
        applicationId "com.s.projectloomdemo"
        minSdk 24
        targetSdk 33
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
        vectorDrawables {
            useSupportLibrary true
        }
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }
    compileOptions {
        sourceCompatibility 19
        targetCompatibility 19
    }
    kotlinOptions {
        jvmTarget = '19'
    }
    buildFeatures {
        compose true
    }
    composeOptions {
        kotlinCompilerExtensionVersion '1.5.1'
    }
    packagingOptions {
        resources {
            excludes += '/META-INF/{AL2.0,LGPL2.1}'
        }
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

tasks.withType(JavaExec) {
    jvmArgs += '--enable-preview'
}

//tasks.withType(JavaCompile).all {
//    options.compilerArgs += ['--enable-preview']
//}

//compileJava {
//    options.warnings = false
//    options.deprecation = false
//    options.compilerArgs += ["-Xdoclint:none", "-Xlint:none", "-nowarn"]
//    options.compilerArgs += ["-Xlint"]
//    options.compilerArgs += ["--enable-preview"]
//    options.compilerArgs += ["-source 14"]
//    // options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
//}

allprojects {
    gradle.projectsEvaluated {
        tasks.withType(JavaCompile) {
            options.warnings = false
            options.deprecation = false
            options.compilerArgs += ["-Xdoclint:none", "-Xlint:none", "-nowarn"]
            options.compilerArgs += ["-Xlint"]
            options.compilerArgs += ["--enable-preview"]
            options.compilerArgs += ["-source 19"]
            // options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
//            options.compilerArgs << "-Xlint:unchecked" << "-Xlint:deprecation"
        }
    }
}


dependencies {

    implementation 'androidx.core:core-ktx:1.10.1'
    implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.6.1'
    implementation 'androidx.activity:activity-compose:1.7.2'
    implementation platform('androidx.compose:compose-bom:2023.06.01')
    implementation 'androidx.compose.ui:ui'
    implementation 'androidx.compose.ui:ui-graphics'
    implementation 'androidx.compose.ui:ui-tooling-preview'
    implementation 'androidx.compose.material3:material3'
    testImplementation 'junit:junit:4.13.2'
    androidTestImplementation 'androidx.test.ext:junit:1.1.5'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
    androidTestImplementation platform('androidx.compose:compose-bom:2023.06.01')
    androidTestImplementation 'androidx.compose.ui:ui-test-junit4'
    debugImplementation 'androidx.compose.ui:ui-tooling'
    debugImplementation 'androidx.compose.ui:ui-test-manifest'

    implementation "com.github.akarnokd:rxjava3-fiber-interop:0.0.18"
}